feat: new endpoints and documentation
